various updates to avoid and remove wrong loop closures; updated visualization;

--- a/dvo_benchmark/launch/benchmark_backend.yaml
+++ b/dvo_benchmark/launch/benchmark_backend.yaml
@@ -8,7 +8,11 @@ constraint_min_entropy_ratio_fine: 0.5
 constraint_min_eq_sys_constraint_ratio: 0.3
 graph_opt_iterations: 50
 graph_opt_min_distance: 0
-graph_opt_final: true
+graph_opt_remove_outliers: true
+graph_opt_outlier_weight_threshold: 0.1
+graph_opt_final: false
+graph_opt_final_remove_outliers: true
+graph_opt_final_outlier_weight_threshold: 0.2
 graph_opt_final_iterations: 1000
 graph_opt_robust: true
 use_multithreading: true
