added options to control whether the full pose graph or only keyframe pose graph is optimized during online/batch optimization; refactored loop closure validation into mini framework;

--- a/dvo_benchmark/launch/benchmark_backend.yaml
+++ b/dvo_benchmark/launch/benchmark_backend.yaml
@@ -2,17 +2,19 @@ max_translational_distance: 0.2
 max_rotational_distance: 0
 min_entropy_ratio: 0.6
 min_eq_sys_constraint_ratio: 0.3
-constraint_search_radius: 0.75
-constraint_min_entropy_ratio_coarse: 0.02
-constraint_min_entropy_ratio_fine: 0.5
+constraint_search_radius: 20.75
+constraint_min_entropy_ratio_coarse: 0.00
+constraint_min_entropy_ratio_fine: 0.3
 constraint_min_eq_sys_constraint_ratio: 0.3
+graph_opt_dense_graph: false
 graph_opt_iterations: 50
 graph_opt_min_distance: 0
-graph_opt_remove_outliers: true
+graph_opt_remove_outliers: false
 graph_opt_outlier_weight_threshold: 0.1
 graph_opt_final: false
+graph_opt_final_dense_graph: true
 graph_opt_final_remove_outliers: true
-graph_opt_final_outlier_weight_threshold: 0.2
+graph_opt_final_outlier_weight_threshold: 0.1
 graph_opt_final_iterations: 1000
 graph_opt_robust: true
 use_multithreading: true
