--- a/dvo_ros/cfg/CameraDenseTracker.cfg
+++ b/dvo_ros/cfg/CameraDenseTracker.cfg
@@ -1,16 +1,15 @@
 #! /usr/bin/env python
 
 PACKAGE='dvo_ros'
-import os
-import roslib; roslib.load_manifest(PACKAGE)
+#import os
 
-from dynamic_reconfigure.parameter_generator import *
+from dynamic_reconfigure.parameter_generator_catkin import *
 
-me = os.path.realpath(__file__)
-cpp_header = os.path.realpath(os.path.join(os.path.dirname(me), "cpp", "dvo_ros", "CameraDenseTrackerConfig.h"))
+#me = os.path.realpath(__file__)
+#cpp_header = os.path.realpath(os.path.join(os.path.dirname(me), "cpp", "dvo_ros", "CameraDenseTrackerConfig.h"))
 
-if os.path.exists(cpp_header) and os.path.getmtime(me) < os.path.getmtime(cpp_header):
-    exit(0)
+#if os.path.exists(cpp_header) and os.path.getmtime(me) < os.path.getmtime(cpp_header):
+#    exit(0)
 
 gen = ParameterGenerator()
 
