--- a/dvo_benchmark/CMakeLists.txt
+++ b/dvo_benchmark/CMakeLists.txt
@@ -1,55 +1,47 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+cmake_minimum_required(VERSION 2.8.3)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
+project(dvo_benchmark)
 
-rosbuild_init()
+LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake_modules")
 
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+find_package(catkin REQUIRED COMPONENTS roscpp dvo_core dvo_ros dvo_slam)
+find_package(cmake_modules REQUIRED)
+find_package(Eigen3 REQUIRED)
+find_package(G2O REQUIRED)
+find_package(OpenCV 2.4.8 REQUIRED)
 
-#uncomment if you have defined messages
-#rosbuild_genmsg()
-#uncomment if you have defined services
-#rosbuild_gensrv()
+#LIST(APPEND CMAKE_CXX_FLAGS "-std=c++11")
 
-#common commands for building c++ executables and libraries
-#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
-#target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
-#rosbuild_add_executable(example examples/example.cpp)
-#target_link_libraries(example ${PROJECT_NAME})
+catkin_package(
+  INCLUDE_DIRS include
+  LIBRARIES dvo_benchmark
+)
 
-# Eigen3 library
-find_package(Eigen REQUIRED)
-include_directories(${Eigen_INCLUDE_DIRS})
+include_directories(
+  "include"
+  ${catkin_INCLUDE_DIRS}
+  ${EIGEN3_INCLUDE_DIRS}
+  ${G2O_INCLUDE_DIR}
+)
 
-# VTK library
-find_package(VTK REQUIRED)
-include_directories(${VTK_INCLUDE_DIRS})
-link_directories(${VTK_LIBRARY_DIRS})
 
-rosbuild_add_executable(benchmark
+add_executable(benchmark
      src/benchmark_slam.cpp
 )
 
-#rosbuild_add_executable(experiment
+#add_executable(experiment
 #     src/experiment.cpp
 #)
 
 target_link_libraries(benchmark
-  vtkCommon
+#  vtkCommon
+  ${catkin_LIBRARIES}
 )
 
 # create output directory - just convenience for our users
-file(MAKE_DIRECTORY "${PROJECT_SOURCE_DIR}/output")
-file(MAKE_DIRECTORY "${PROJECT_SOURCE_DIR}/output/video")
+#file(MAKE_DIRECTORY "${PROJECT_SOURCE_DIR}/output")
+#file(MAKE_DIRECTORY "${PROJECT_SOURCE_DIR}/output/video")
+
+install(DIRECTORY launch/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
+)
