--- a/dvo_core/CMakeLists.txt
+++ b/dvo_core/CMakeLists.txt
@@ -1,45 +1,34 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+cmake_minimum_required(VERSION 2.8.3)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
+project(dvo_core)
 
-rosbuild_init()
+find_package(catkin REQUIRED)
+find_package(cmake_modules REQUIRED)
+find_package(PCL REQUIRED COMPONENTS common)
+find_package(Eigen3 REQUIRED)
+find_package(sophus REQUIRED)
+find_package(Boost REQUIRED COMPONENTS thread)
+find_package(OpenCV 2.4.8 REQUIRED)
+find_package(TBB REQUIRED)
 
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
-
-#common commands for building c++ executables and libraries
-#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
-#target_link_libraries(${PROJECT_NAME} another_library)
-#rosbuild_add_boost_directories()
-#rosbuild_link_boost(${PROJECT_NAME} thread)
-#rosbuild_add_executable(example examples/example.cpp)
-#target_link_libraries(example ${PROJECT_NAME})
-
-# Eigen3 library
-find_package(Eigen REQUIRED)
-include_directories(${Eigen_INCLUDE_DIRS})
-
-# VTK library
-find_package(VTK REQUIRED)
-include_directories(${VTK_INCLUDE_DIRS})
-
-# SSE flags
-rosbuild_check_for_sse()
-
-set(CMAKE_CXX_FLAGS_RELWITHDEBINFO
-   "${SSE_FLAGS} -O3 -march=native"
+catkin_package(
+  INCLUDE_DIRS include
+  LIBRARIES dvo_core dvo_visualization
+  DEPENDS OpenCV PCL
 )
 
-rosbuild_add_library(${PROJECT_NAME} 
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse -msse2 -msse3 -msse4 -ftree-vectorize")
+
+include_directories(
+  "include"
+  ${sophus_INCLUDE_DIRS}
+  ${catkin_INCLUDE_DIRS}
+  ${EIGEN3_INCLUDE_DIRS}
+  ${Boost_INCLUDE_DIRS}
+  ${PCL_INCLUDE_DIRS}
+)
+
+add_library(dvo_core 
     src/core/interpolation.cpp
     src/core/intrinsic_matrix.cpp
     src/core/least_squares.cpp
@@ -59,22 +48,18 @@ rosbuild_add_library(${PROJECT_NAME}
     src/dense_tracking_config.cpp
 )
 
-target_link_libraries(${PROJECT_NAME} 
+target_link_libraries(dvo_core 
     tbb
-    boost_thread
+    boost_thread 
+    ${PCL_LIBRARIES}
 )
 
-rosbuild_add_library(dvo_visualization
+add_library(dvo_visualization
     src/visualization/async_point_cloud_builder.cpp
     src/visualization/point_cloud_aggregator.cpp
-    src/visualization/pcl_camera_trajetory_visualizer.cpp
+#    src/visualization/pcl_camera_trajetory_visualizer.cpp
 )
 
 target_link_libraries(dvo_visualization
-  ${PROJECT_NAME} 
+  dvo_core
 )
-
-#rosbuild_add_executable(sse_test
-#    src/sse_test.cpp
-#    src/core/math_sse.cpp
-#)
