--- a/dvo_slam/cfg/KeyframeSlam.cfg
+++ b/dvo_slam/cfg/KeyframeSlam.cfg
@@ -1,16 +1,8 @@
 #! /usr/bin/env python
 
 PACKAGE='dvo_slam'
-import os
-import roslib; roslib.load_manifest(PACKAGE)
 
-from dynamic_reconfigure.parameter_generator import *
-
-me = os.path.realpath(__file__)
-cpp_header = os.path.realpath(os.path.join(os.path.dirname(me), "cpp", PACKAGE, "KeyframeSlamConfig.h"))
-
-if os.path.exists(cpp_header) and os.path.getmtime(me) < os.path.getmtime(cpp_header):
-    exit(0)
+from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
