fix compilation with current version of jade and dependencies

--- a/dvo_benchmark/CMakeLists.txt
+++ b/dvo_benchmark/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(Eigen3 REQUIRED)
 find_package(G2O REQUIRED)
 find_package(OpenCV 2.4.8 REQUIRED)
 
-#LIST(APPEND CMAKE_CXX_FLAGS "-std=c++11")
+LIST(APPEND CMAKE_CXX_FLAGS "-std=c++11")
 
 catkin_package(
   INCLUDE_DIRS include
