--- a/dvo_core/package.xml
+++ b/dvo_core/package.xml
@@ -15,8 +15,9 @@
   <build_depend>cmake_modules</build_depend>
 
   <build_depend>libpcl-all-dev</build_depend>
-  <!--build_depend>sophus</build_depend-->
+  <build_depend>sophus</build_depend>
   <build_depend>libopencv-dev</build_depend>
+  <build_depend>tbb</build_depend>
   
   <run_depend>libpcl-all</run_depend>
   <run_depend>libopencv-dev</run_depend>
