--- a/dvo_slam/package.xml
+++ b/dvo_slam/package.xml
@@ -23,6 +23,8 @@
   <build_depend>dvo_core</build_depend>
   <build_depend>dvo_ros</build_depend>
 
+  <build_depend>message_generation</build_depend>
+  
   <build_depend>sensor_msgs</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>message_filters</build_depend>
@@ -38,6 +40,9 @@
 
   <run_depend>dvo_core</run_depend>
   <run_depend>dvo_ros</run_depend>
+
+  <run_depend>message_generation</run_depend>
+  <run_depend>message_runtime</run_depend>
 
   <run_depend>sensor_msgs</run_depend>
   <run_depend>image_transport</run_depend>
