compile with opencv3 only

--- a/dvo_benchmark/CMakeLists.txt
+++ b/dvo_benchmark/CMakeLists.txt
@@ -4,11 +4,11 @@ project(dvo_benchmark)
 
 LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake_modules")
 
-find_package(catkin REQUIRED COMPONENTS roscpp dvo_core dvo_ros dvo_slam)
+find_package(catkin REQUIRED COMPONENTS roscpp dvo_core dvo_ros dvo_slam cv_bridge)
 find_package(cmake_modules REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(G2O REQUIRED)
-find_package(OpenCV 2.4.8 REQUIRED)
+#find_package(OpenCV REQUIRED)
 
 LIST(APPEND CMAKE_CXX_FLAGS "-std=c++11")
 
@@ -32,7 +32,7 @@ add_executable(benchmark
 #add_executable(experiment
 #     src/experiment.cpp
 #)
-
+message(STATUS ${catkin_LIBRARIES})
 target_link_libraries(benchmark
 #  vtkCommon
   ${catkin_LIBRARIES}
