--- a/dvo_slam/CMakeLists.txt
+++ b/dvo_slam/CMakeLists.txt
@@ -10,7 +10,7 @@ find_package(Eigen3 REQUIRED)
 find_package(G2O REQUIRED)
 #find_package(sophus REQUIRED)
 #find_package(Boost REQUIRED thread)
-find_package(OpenCV 2.4.8 REQUIRED)
+#find_package(OpenCV REQUIRED)
 find_package(TBB REQUIRED)
 
 LIST(APPEND CMAKE_CXX_FLAGS "-std=c++11")
