--- a/dvo_benchmark/package.xml
+++ b/dvo_benchmark/package.xml
@@ -15,7 +15,7 @@
   <build_depend>cmake_modules</build_depend>
 
   <build_depend>libpcl-all-dev</build_depend>
-  <build_depend>libopencv-dev</build_depend>
+  <build_depend>cv_bridge</build_depend>
   <build_depend>roscpp</build_depend>
 
   <build_depend>dvo_core</build_depend>
@@ -23,7 +23,7 @@
   <build_depend>dvo_slam</build_depend>
     
   <run_depend>libpcl-all</run_depend>
-  <run_depend>libopencv-dev</run_depend>
+  <run_depend>cv_bridge</run_depend>
   <run_depend>roscpp</run_depend>
 
   <run_depend>dvo_core</run_depend>
