--- a/dvo_ros/package.xml
+++ b/dvo_ros/package.xml
@@ -15,7 +15,7 @@
   <build_depend>cmake_modules</build_depend>
 
   <build_depend>libpcl-all-dev</build_depend>
-  <build_depend>libopencv-dev</build_depend>
+  <!--build_depend>libopencv-dev</build_depend-->
   <build_depend>roscpp</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>tf_conversions</build_depend>
@@ -33,7 +33,7 @@
   <build_depend>pcl_ros</build_depend>
     
   <run_depend>libpcl-all</run_depend>
-  <run_depend>libopencv-dev</run_depend>
+  <!--run_depend>libopencv-dev</run_depend-->
   <run_depend>roscpp</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>tf_conversions</run_depend>
